--- a/index.html
+++ b/index.html
@@ -4,9 +4,79 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GentleHeartQuiz</title>
+  <style>
+    body {
+      font-family: "Noto Sans Thai", sans-serif;
+      background-color: #fefefe;
+      color: #222;
+      padding: 20px;
+      line-height: 1.6;
+    }
+    h1 {
+      font-size: 28px;
+      color: #444;
+    }
+    label {
+      display: block;
+      margin: 12px 0 4px;
+    }
+    select, input[type="submit"] {
+      font-size: 16px;
+      padding: 8px;
+      width: 100%;
+      margin-bottom: 16px;
+    }
+    .result {
+      margin-top: 20px;
+      font-weight: bold;
+      color: #006666;
+    }
+  </style>
 </head>
 <body>
-  <h1>ยินดีต้อนรับสู่ GentleHeartQuiz</h1>
-  <p>โปรเจกต์นี้จะช่วยคุณประเมินความพร้อมก่อนอ่านเนื้อหาเข้มข้น ด้วยใจที่อ่อนโยน</p>
+
+  <h1>แบบทดสอบหัวใจอ่อนโยน</h1>
+  <p>วันนี้คุณรู้สึกพร้อมอ่านเรื่องราวแบบใด?</p>
+
+  <form id="quizForm">
+    <label for="mood">อารมณ์ตอนนี้ของคุณคือ?</label>
+    <select id="mood">
+      <option value="calm">สบายใจ</option>
+      <option value="sad">บาดใจ/เศร้า</option>
+      <option value="anxious">เครียด/หวาดระแวง</option>
+    </select>
+
+    <label for="sensitivity">คุณรู้สึกว่าตัวเองรับมือกับเนื้อหาหนักๆ ได้ไหม?</label>
+    <select id="sensitivity">
+      <option value="yes">ได้</option>
+      <option value="medium">พอได้</option>
+      <option value="no">ไม่อยากเลย</option>
+    </select>
+
+    <input type="submit" value="ดูผลคำแนะนำ">
+  </form>
+
+  <div id="result" class="result"></div>
+
+  <script>
+    document.getElementById("quizForm").addEventListener("submit", function(event) {
+      event.preventDefault();
+      const mood = document.getElementById("mood").value;
+      const sensitivity = document.getElementById("sensitivity").value;
+
+      let resultText = "";
+
+      if (mood === "calm" && sensitivity === "yes") {
+        resultText = "คุณพร้อมสำหรับเรื่องราวเข้มข้น เช่น สืบสวน ดราม่า หรือจิตวิทยา";
+      } else if (mood === "sad" || sensitivity === "no") {
+        resultText = "วันนี้ลองเลือกเรื่องอบอุ่นใจ เบาสบาย หรือมีพลังบวกจะดีกว่า";
+      } else {
+        resultText = "คุณอาจเหมาะกับเนื้อหาที่มีสาระและเข้าใจง่าย เช่น แรงบันดาลใจหรือสารคดีเบาๆ";
+      }
+
+      document.getElementById("result").innerText = resultText;
+    });
+  </script>
+
 </body>
 </html>
